Add an attack method to player
It takes a vector slice of opponents and attacks one randomly for all of
its attack value.

Future changes:
- get a list of targets from the players instead of attacking the actual
players (they may not be targetable)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 authors = ["Josh Morrow <josh@jcmorrow.com>", "Cameron McCallie <mccallie.cameron@gmail.com>"]
 
 [dependencies]
+rand = "*"
